tests-integration/tests/roundtrip/invalid/semantic_errors/typecheck/bool_constant_in_arith_expr/tree-sitter.expected-error.txt
tests/roundtrip/invalid/semantic_errors/typecheck/bool_constant_in_arith_expr/bool_constant_in_arith_expr.essence:2:15:
  |
2 | such that 4 + false = x
  |               ^
Type error: Boolean value 'false' used in arithmetic context